# dsg

./: README.md  pyproject.toml
src/dsg/: __init__.py  builder.py  connections.py  constants.py  core.py  jinja_functions.py  models.py  render.py  server.py
src/dsg/connections/: base.py  duckdb_conn.py
src/dsg/templates/: dsg.yml  index.md  page.html
tests/: test_queries.py
tests/sample_proj/: dsg.yml  index.md
tests/sample_proj/pages/: index.md  my_page.md  test_page.md
tests/sample_proj/sql/: all_data.sql
